2022-02-22

  * removed Halicarnassus; appears to be an unfinished/abandoned map

2022-02-19

  * replace Povorotnaya map preview (fixes #30)
  * v0.25.11 released

2022-02-14

  * v0.25.10 released

2021-12-14

  * add Povorotnaya (random map by norjay)

2021-11-23

  * fix ally placement when some players are not assigned a team
  * add Cantabrian Highlands TG (random map)

2021-11-15

  * add Mainland Balanced and Alpine Mountains (random maps authored by
  Feldfeld, which were originally released as the feldmap mod
  <https://wildfiregames.com/forum/topic/53880-feldmap-a25/>)
  * v0.25.9 released

2021-11-12

  * add Jammy's Despair (random map)

2021-11-04

  * replace underscores with hyphens in mod name to fix incompatibility
  bug (see
  https://wildfiregames.com/forum/topic/57694-community-maps-2/?do=findComment&comment=463379)
  (Thanks to Palaiologos and ValihrAnt for helping test)
  * various improvements to Mainland Rectangled, Yekaterinaville, and Corinthian Isthmus II
  * v0.25.8 released

2021-10-30

  * Add Corinthian Isthmus II (random map)
  * v0.25.7 released

2021-10-27

  * Fix issue with bridges (See https://github.com/0ad-matters/community_maps_2/pull/12)
  * Fix team spacing on Mainland TG (See https://code.wildfiregames.com/differential/diff/18891/)
  * Make player positions more uniform on Mainland Rectangled and Yekaterinaville


2021-10-26

  * Remove player color settings from At World's End (scenario) (fixes
  crashing when re-entering game setup menu)
  * Remove Lonely Mountain (while playable, it's basically an incomplete map)
  * Remove Jerusalem (freezes for about 5 seconds after game starts, laggy)
  * v0.25.6 released

2021-10-23

  * Yekaterinaville added (random map)
  * Chess added (skirmish map)

2021-10-22

  * Mainland Rectangled added (random map)

2021-10-20

  * allow changing civs, fix warnings
    * The Duel
    * Lonely Mountain
    * Country Side

  * change fauna_bear to faun_bear_brown and wolf_snow to wolf_arctic