@@ -1,6 +1,7 @@
 2022-02-22
 
   * removed Halicarnassus; appears to be an unfinished/abandoned map
+  * Battle of Vikingland:fix warnings about missing longboat
 
 2022-02-19
 
